[package]
name = "simple_vpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
nix = { version = "0.28.0", features = ["user"]}
log = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tun = "0.11.4"
tokio-native-tls = "0.3.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.116"
tokio-util = "0.7.10"
packet = "0.1.4"
etherparse = "0.14"
